<resources>
    <string name="app_name">PwdNote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首页</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">登录</string>
    <string name="menu_night_mode">夜间模式</string>
    <string name="menu_set">设置</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_share">分享我的密码</string>
    <string name="menu_about">关于</string>
    <string name="title_activity_edit_account">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>