<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <group
        android:checkableBehavior="single"
        android:menuCategory="system">
        <item
            android:id="@+id/nav_set"
            android:icon="@drawable/ic_home_set"
            android:title="@string/menu_set" />

        <item
            android:id="@+id/nav_night_mode"
            android:icon="@drawable/ic_home_dark"
            android:title="@string/menu_night_mode" />

    </group>

    <group
        android:checkableBehavior="single"
        android:menuCategory="system">

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_home_feedback"
            android:title="@string/menu_feedback" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_home_share"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_home_about"
            android:title="@string/menu_about" />
    </group>
</menu>